# tsm

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
lattice/: ABSOLUTE_COMPLETION.md  Cargo.toml  DEPLOYMENT.md  OPERATIONS.md  README.md  RESEARCH_PAPER.md  WORLD_CLASS_COMPLETE.md
lattice/benches/: academic_benchmarks.rs  benchmarks.rs
lattice/core/: advanced_profiling.rs  analysis.rs  automated_proving.rs  byzantine.rs  chaos.rs  compression.rs  config.rs  distributed.rs  formal_proofs.rs  invariants.rs  lib.rs  ml_anomaly.rs  monitoring.rs  multi_region.rs  network.rs  optimization.rs  quantum_crypto.rs  raft.rs  recovery.rs  security.rs  storage.rs  tla.rs  trace.rs
lattice/examples/: cluster.rs  demo.rs  production.rs
lattice/src/: main.rs
lattice/tests/: comprehensive.rs  integration.rs  integration_tests.rs  world_class_integration.rs
src/: builder.test.ts  builder.ts  example1-traffic-light.ts  example2-order-fulfillment.ts  example3-type-safety.ts  example4-protocol.ts  index.ts  machine.test.ts  machine.ts  types.ts
ude/: UDE_COMPLETE_SUMMARY.md  setup.py  telemetry-id
ude/ude/: BREAKTHROUGH.md  PROJECT_OMEGA.md  PROJECT_SUMMARY.md  README.md  TECHNICAL_REPORT.md  UDE_CHECKLIST.md  VALIDATION_FINAL.md  VALIDATION_REPORT.md  VALIDATION_ROADMAP.md  analyze.py  autonomous_ude.py  checkpoint.py  continuous.py  dashboard.html  export.py  main.py  multi_domain.py  requirements.txt  theorems.csv  theorems.json  theorems.tex
ude/ude/archive/: storage.py
ude/ude/axioms/: __init__.py  generator.py
(+31 files in other folders)
